One last fix for dark mode code.

--- a/_sass/rouge-github.scss
+++ b/_sass/rouge-github.scss
@@ -156,6 +156,11 @@
 .highlight .s {
   color: #d14;
 }
+.highlight .n {
+  @media (prefers-color-scheme: dark) {
+    color: #445588;
+  }
+}
 .highlight .na {
   color: #008080;
 }
